--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,8 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <script>
-      let quien = ["The dog", "My grandma", "His turtle", "My bird"];
-
-      var value = quien[Math.floor(Math.random() * quien.length)];
-      var randomAction = action[Math.floor(Math.random() * action.length)];
-
-      let excusaGenerada = randomWho + randomAction;
-    </script>
+    <div id="miCaja">hola</div>
+    <button id="miBoton">generar excusa</button>
+    <script src="app.js"></script>
   </body>
 </html>
