--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div id="miCaja">hola</div>
+    <div id="miCaja"></div>
 
     <script src="app.js"></script>
   </body>
