--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,14 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div id="miCaja"></div>
-
-    <script src="app.js"></script>
+    <div>
+      <div class="textCenter">
+        <h3>No te lo vas a creer...</h3>
+      </div>
+        <div class="textCenter">
+          <h1 id="miCaja"></h1>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
